--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -106,6 +106,7 @@
             position: absolute;
             right: 83px !important;
             top: 0;
+            z-index : -1;
         }
     }
 
